# Sentimental-analysis

./: pyproject.toml
models/: sentiment_model.pkl
src/sentiment_analysis/: predict.py  preprocessing.py  train.py
src/sentiment_analysis/.ipynb_checkpoints/: config-checkpoint.py  evaluate-checkpoint.py
